	bmc-config (bug #17098).

	* common/doc/argp-common.man: Removed file.

	* common/doc/argp-common-inband.man,
	 common/doc/argp-common-outofband.man,
	 common/doc/argp-common-authtype.man,
	 common/doc/argp-common-privlevel.man,
	 common/doc/argp-common-misc.man: New files.

	* common/doc/Makefile.am: Update for new files.

	* bmc-config/bmc-config.8.pre.in, bmc-info/bmc-info.8.pre.in,
	ipmi-raw/ipmi-raw.8.pre.in, ipmi-sel/ipmi-sel.8.pre.in: Adjust for
	change to new argp common manpage files.  Use non-default manpage
	for priv level on bmc-config.8.

	* argp-common.h (ARGP_COMMON_OPTIONS): Split into 4 new defines
	ARGP_COMMON_OPTIONS_INBAND, ARGP_COMMON_OPTIONS_OUTOFBAND,
	ARGP_COMMON_OPTIONS_AUTHTYPE, and ARGP_COMMON_OPTIONS_PRIVLEVEL.
	
	* bmc-config/src/bmc-argp.c: Use new defines.  Make priv-level default ADMIN.

	* bmc-config/src/bmc-config.c (main): Set appropriate default values.

2006-07-12  Albert Chu <chu11@llnl.gov>

	Rework udm raw functions to take lun and netfn parameters and
	had API similar to rest of FreeIPMI (bug #16283).

	* libfreeipmi/include/freeipmi/udm/ipmi-udm.h,
	libfreeipmi/src/udm/ipmi-udm.c (ipmi_cmd_raw): Add lun and netfn
	parameters.  Adjust parameter checks appropriately.  Adjust
	function call style.

	* libfreeipmi/src/udm/ipmi-kcs-api-udm.c (ipmi_kcs_cmd_raw_udm),
	libfreeipmi/src/udm/ipmi-ssif-api-udm.c (ipmi_ssif_cmd_raw_udm),
	libfreeipmi/src/udm/ipmi-lan-interface-udm.c
	(ipmi_lan_cmd_raw_udm): Adjust appropriately for changes.  Adjust
	function call style.
	
	* libfreeipmi/src/udm/ipmi-lan-interface-udm.c
	(_ipmi_lan_raw_send_parse, _ipmi_lan_raw_create_cmd,
	_ipmi_lan_raw_recv_parse): Remove functions.

	* ipmi-raw/ipmi-raw.8.pre.in: Update for lun and netfn input.

	* ipmi-raw/src/ipmi-raw.c (main): Check for hex byte lengths.
	Adjust to read and pass in lun and netfn.  Adjust for function
	call change.  Cleanup error output calls.

2006-07-12  Albert Chu <chu11@llnl.gov>

	Fix lan retransmission issues.
